fix: revise padding to vertically align headers

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 #gh {
   justify-self: fled-end;
   background-color: #72548f;
-  margin: 8px .1px;
+  margin: 8px 0.1px;
   color: white;
   padding: 5px 10px;
   text-align: center;
